# ViennaRay

./: CMakeLists.txt  format-project.sh
.github/setup-action/: action.yml
.github/workflows/: linux_test.yml  macos_test.yml  windows_test.yml
Examples/: CMakeLists.txt
Examples/Trench/: CMakeLists.txt
Examples/Trench2D/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/intersectionTest/: intersectionTest.cpp
Tests/traceInterface/: CMakeLists.txt
Tests/tracingData/: CMakeLists.txt
Wrapping/: CMakeLists.txt
Wrapping/Python/: CMakeLists.txt  pyWrap.cpp
cmake/: ViennaRayConfig.cmake.in
include/: rayTrace.hpp  rayTraceKernel.hpp
